# manager

./: .gitignore  Makefile  Manager.pyproj  README.md  pyproject.toml  requirements.txt  runserver.py
.github/Workflows/: Release.yml
.github/workflows/: main.yml
Manager/: __init__.py  views.py
Manager/models/: cachedata.py
Manager/myredis/: __init__.py
Manager/static/content/: jumbotron.css  redis.css  table.css
Manager/templates/: index.html  layout.html  redis.html  table.html
Manager/views/: __init__.py  home.py  simulator.py
